# irc-lens

./: .gitignore  CITATION.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/pr-review/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cli.md  playwright.md  slash-commands.md  sse-events.md
docs/superpowers/plans/: 2026-04-27-irc-lens-build-plan.md
docs/superpowers/specs/: 2026-04-27-irc-lens-handover-design.md
src/irc_lens/: __init__.py  __main__.py  commands.py  seed.py  session.py
src/irc_lens/cli/: __init__.py  _errors.py  _output.py
src/irc_lens/cli/_commands/: explain.py  learn.py  overview.py  serve.py
src/irc_lens/explain/: __init__.py  catalog.py
src/irc_lens/irc/: __init__.py  buffer.py  message.py  transport.py
src/irc_lens/static/: lens.css  lens.js
src/irc_lens/templates/: _chat_line.html.j2  _chat_line.j2  _info.html.j2  _sidebar.html.j2  index.html.j2
src/irc_lens/web/: __init__.py  app.py  events.py  render.py  routes.py
tests/: README.md  _agentirc_server.py  conftest.py  test_cli.py  test_commands.py  test_commands_smoke.py  test_e2e_http.py  test_e2e_playwright.py  test_irc_smoke.py  test_lens_js.py  test_render.py  test_seed.py  test_serve_cli.py  test_session_dispatch.py  test_session_unit.py  test_web_events.py  test_web_skeleton.py
tests/fixtures/: basic.yaml
