[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irc-lens"
version = "0.1.0"
description = "Reactive web console for AgentIRC — Playwright-driveable lens for the Culture mesh."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Ori Nachum", email = "ori.nachum@gmail.com" },
]
keywords = ["irc", "agentirc", "culture", "agent", "lens", "console", "htmx", "sse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
dependencies = [
    "aiohttp>=3.9",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=4.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]

[project.scripts]
irc-lens = "irc_lens.cli:main"

[project.urls]
Homepage = "https://github.com/agentculture/irc-lens"
Issues = "https://github.com/agentculture/irc-lens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/irc_lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default-exclude the `playwright` marker: a bare `pytest` run skips
# browser tests so local dev / the existing CI `test` job stays fast
# (no chromium download, no per-test browser spin-up). The Playwright
# CI job overrides via `pytest -m playwright`.
addopts = "-m 'not playwright'"
markers = [
    "playwright: opt-in browser end-to-end tests (requires `playwright install chromium`).",
]
